--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ python:
 install:
   - pip install .
   - pip install -r requirements.txt
+  - pip install pytest
 # command to run tests
 script:
   - pytest
