--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,16 @@ env:
 install:
   - pip install -q networkx==$NETWORKX_VERSION
   - pip install -q -r requirements.txt
+  # install packages to track test coverage
+  - pip install -q coverage pytest-cov coverage-badge
 # command to run tests
 script:
 # This runs test discovery on all modules with names ending '_test'
-  - python3 -m pytest -v
-# command to silence email notifications
+  - py.test --cov=BrainNetworksInPython
+# Report on coverage
+  - coverage report -m
+# Save coverage badge
+  - coverage-badge -o coverage.svg
+# Silence email notifications
 notifications:
   email: false
