suppress testing of python 3.5 nd nx 1.9

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ python:
     #  - "3.2" # scipy requires python >= 3.4
     #  - "3.3"
     #  - "3.4" # networkx2.0 requires python >= 3.6
-  - "3.5"
+  # - "3.5"
   - "3.6"
 env:
-  - NETWORKX_VERSION=1.9
+  # - NETWORKX_VERSION=1.9
   - NETWORKX_VERSION=2.0
 # command to install dependencies
 install:
