--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
 - pip install sphinx sphinx sphinxcontrib-napoleon sphinx_rtd_theme
 script:
 - python3 -m pytest -v
+- cd docs
 - make html
 after_success:
 - ./push.sh
