cd back out of docs to push docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ script:
 #- python3 -m pytest -v
 - cd docs
 - make html
-# after_success:
+ after_success:
+- cd ..
 - ./push.sh
 notifications:
   email: false
