--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ script:
 #- python3 -m pytest -v
 - cd docs
 - make html
+- cd ..
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
+  local-dir: docs/build/html
   on:
     branch: dev
 notifications:
