--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-pytest
-pandas<=0.22.0
-python-louvain==0.11 
+pandas
+python-louvain>=0.11 
 numpy
 scipy
 networkx>=2.0
 seaborn
-nibabel
 forceatlas2
-pillow
-nilearn==0.5.0a0
+matplotlib
+nilearn>=0.5.0a0
