--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
+# Note that this requirements file list the requirements needed to run the testing suite.
+# Package dependencies should be listed in setup.py instead. 
 pytest
 pandas<=0.22.0
 python-louvain==0.11 
 numpy
 scipy
 networkx>=2.0
-seaborn
-nibabel
-forceatlas2
-pillow
-nilearn==0.5.0a0
