--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@
 # Package dependencies should be listed in setup.py instead. 
 pytest
 pandas<=0.22.0
-python-louvain==0.11 
+python-louvain==0.11
 numpy
 scipy
 networkx>=2.2
+seaborn
+forceatlas2
+nilearn==0.5.0a0
