Add scikit-learn to requirements.txt to build Binder repo

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pandas  # unpinning pandas makes binder work but the tests break
 python-louvain==0.11
 numpy
 scipy
+scikit-learn
 networkx>=2.2
 seaborn
 forceatlas2
