--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Note that this requirements file list the requirements needed to run the testing suite.
 # Package dependencies should be listed in setup.py instead. 
 pytest
-pandas  # unpinning pandas makes binder work but the tests break
+pandas
 python-louvain==0.11
 numpy
 scipy
