Add regression test back in

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ install:
   - pip install -q -r requirements.txt
   - pip install sphinx sphinx sphinxcontrib-napoleon sphinx_rtd_theme
 script:
-  - python3 -m pytest -v --ignore=tests/regression_test.py
-# temporarily ignore regression tests while we investigate why they are failing
+  - python3 -m pytest -v
   - cd docs
   - make html
   - touch .nojekyll
