--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,7 @@ docs/source/_build/
 # stick around. Either way we don't want them in the main
 # repository so lets ignore the directory.
 temporary_test_fixtures/
+
+# ignore the src folder which appears on Kirstie's windows
+# machine (we're not sure wehre it came from!)
+src/
