--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
 script:
   - python3 -m pytest -v --ignore=tests/regression_test.py
 # temporarily ignore regression tests while we investigate why they are failing
+  - py.test --nbval-lax tutorials/
   - cd docs
   - make html
   - touch .nojekyll
